--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "ts-node": "^10.9.0",
     "typescript": "^4.7.0",
     "webpack": "^5.75.0"
+  },
+  "dependencies": {
+    "@types/tapable": "^2.2.2"
   }
 }
