--- a/package.json
+++ b/package.json
@@ -4,23 +4,24 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
+    "@types/jest": "^29.2.3",
     "@types/node": "^16.11.56",
+    "@types/tapable": "^2.2.2",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "eslint": "^8.23.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "ts-node": "^10.9.0",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.0",
     "webpack": "^5.75.0"
-  },
-  "dependencies": {
-    "@types/tapable": "^2.2.2"
   }
 }
