--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -2,6 +2,7 @@
     "extends": "./tsconfig.json",
     "include": [
         "index.ts",
+        "jest.config.ts",
         "src/**/*.ts",
         "test/**/*.ts"
     ]
