--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,12 @@
 {
     "compilerOptions": {
-        "baseUrl": "./", // this must be specified if "paths" is specified.
-        "paths": {}
+        "baseUrl": "./",
+        "paths": {
+            "@src/*": [
+                "src/*"
+            ]
+        },
+        "resolveJsonModule": true
     },
     "extends": "@tsconfig/recommended/tsconfig.json"
 }
