--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tsconfig/recommended": "^1.0.1",
     "@types/jest": "^29.2.3",
     "@types/node": "^16.11.56",
+    "@types/shelljs": "^0.8.11",
     "@types/tapable": "^2.2.2",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
@@ -19,6 +20,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^29.3.1",
+    "shelljs": "^0.8.5",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.0",
