--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "^29.2.3",
     "@types/node": "^16.11.56",
     "@types/shelljs": "^0.8.11",
@@ -19,6 +20,7 @@
     "eslint": "^8.23.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "fs-extra": "^10.1.0",
     "jest": "^29.3.1",
     "shelljs": "^0.8.5",
     "ts-jest": "^29.0.3",
