spit into two repo

--- a/src/package.json
+++ b/src/package.json
@@ -1,20 +1,27 @@
 {
-  "name": "webpack-analytics-plugin",
+  "name": "time-analytics-webpack-plugin",
   "version": "0.0.1",
   "description": "",
-  "main": "index.ts",
+  "main": "/dist/index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc -p ./tsconfig.json"
   },
   "author": "",
   "license": "ISC",
+  "peerDependencies": {
+    "webpack": "^5"
+  },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
+    "@types/node": "^16.11.56",
+    "@types/tapable": "^2.2.2",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "eslint": "^8.23.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "typescript": "^4.7.0"
+    "typescript": "^4.7.0",
+    "webpack": "^5.75.0"
   }
 }
