--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,11 +1,6 @@
 {
     "compilerOptions": {
-        "baseUrl": "./",
-        "paths": {
-            "@src/*": [
-                "src/*"
-            ]
-        },
+        "target": "ES2020",
         "resolveJsonModule": true
     },
     "extends": "@tsconfig/recommended/tsconfig.json"
