--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "^8.23.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "typescript": "^4.7.0"
+    "typescript": "^4.7.0",
+    "webpack": "^5.75.0"
   }
 }
