--- a/src/package.json
+++ b/src/package.json
@@ -20,8 +20,6 @@
     "@typescript-eslint/parser": "^5.35.1",
     "eslint": "^8.23.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "typescript": "^4.7.0",
-    "webpack": "^5.75.0"
+    "eslint-plugin-import": "^2.26.0"
   }
 }
