--- a/src/package.json
+++ b/src/package.json
@@ -21,5 +21,8 @@
     "eslint": "^8.23.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.26.0"
+  },
+  "dependencies": {
+    "chalk": "^4.1.2"
   }
 }
