--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,8 @@
     "eslint-plugin-import": "^2.26.0"
   },
   "dependencies": {
-    "chalk": "^4.1.2"
+    "@types/ramda": "^0.28.20",
+    "chalk": "^4.1.2",
+    "ramda": "^0.28.0"
   }
 }
