--- a/src/package.json
+++ b/src/package.json
@@ -15,10 +15,10 @@
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
     "@types/node": "^16.11.56",
-    "@types/tapable": "^2.2.2"
+    "@types/tapable": "^2.2.2",
+    "@types/ramda": "^0.28.20"
   },
   "dependencies": {
-    "@types/ramda": "^0.28.20",
     "chalk": "^4.1.2",
     "ramda": "^0.28.0"
   }
