--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "private": true,
+  "scripts": {
+    "build": "pnpm -r run build",
+    "test": "pnpm -r run test"
+  },
   "devDependencies": {
     "@tsconfig/node14": "^1.0.1",
+    "@types/node": "^16.11.56",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "eslint": "^8.23.0",
