--- a/packages/time-analytics-webpack-plugin/tsconfig.json
+++ b/packages/time-analytics-webpack-plugin/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "../tsconfig.base.json",
+    "extends": "../../tsconfig.base.json",
     "compilerOptions": {
         "outDir": "./dist",
         "target": "ES2020",
