Fix test for structure change

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -32,7 +32,7 @@ jobs:
       run: pnpm install
       
     - name: Build
-      run: pnpm -r run build
+      run: pnpm run build
       
     - name: Test
-      run: pnpm -r run test
+      run: pnpm run test
