try to use custom action

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -22,17 +22,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Install pnpm
-      uses: pnpm/action-setup@v2
-      id: pnpm-install
-      with:
-        version: 7
-
-    - name: Install dependency
-      run: pnpm install
-      
-    - name: Build
-      run: pnpm run build
-      
-    - name: Test
-      run: pnpm run test
+    - uses: ./github/actions/set-environment
+    - uses: ./github/actions/build-and-test
