--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,22 +16,10 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
-          
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        id: pnpm-install
-        with:
-          version: 7
 
-      - name: Install dependency
-        run: pnpm install
-      
-      - name: Build
-        run: pnpm run build
-      
-      - name: Test
-        run: pnpm run test
+      - uses: ./github/actions/set-environment
+      - uses: ./github/actions/build-and-test
 
-      - run: npm publish
+      - run: pnpm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+          NODE_AUTH_TOKEN: ${{secrets.NPM_PUBLISH_SECRET}}
