--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "test": "pnpm -r run test"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.25.2",
     "@tsconfig/node14": "^1.0.1",
     "@types/node": "^16.11.56",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
@@ -12,8 +13,8 @@
     "eslint": "^8.23.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.0",
-    "webpack": "^5.75.0",
-    "ts-node": "^10.9.1"
+    "webpack": "^5.75.0"
   }
 }
