Fix custom action

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -22,5 +22,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - uses: ./github/actions/set-environment
-    - uses: ./github/actions/build-and-test
+    - uses: ./.github/actions/set-environment
+    - uses: ./.github/actions/build-and-test
