--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -17,8 +17,8 @@ jobs:
           node-version: 16
           registry-url: https://registry.npmjs.org/
 
-      - uses: ./github/actions/set-environment
-      - uses: ./github/actions/build-and-test
+      - uses: ./.github/actions/set-environment
+      - uses: ./.github/actions/build-and-test
 
       - run: pnpm publish
         env:
