--- a/.github/actions/build-and-test/action.yaml
+++ b/.github/actions/build-and-test/action.yaml
@@ -1,7 +1,7 @@
 name: 'build-and-test'
 description: 'build and test the whole repo'
-inputs:
-outputs:
+# inputs:
+# outputs:
 runs:
   using: "composite"
   steps:
