--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -17,9 +17,21 @@ jobs:
           node-version: 16
           registry-url: https://registry.npmjs.org/
 
-      - uses: ./.github/actions/set-environment
-      - uses: ./.github/actions/build-and-test
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        id: pnpm-install
+        with:
+          version: 7
 
-      - run: pnpm publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_PUBLISH_SECRET}}
+      - name: Install dependency
+        run: pnpm install
+        
+      - name: Build
+        run: pnpm run build
+        
+      - name: Test
+        run: pnpm run test
+
+      # - run: pnpm publish
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{secrets.NPM_PUBLISH_SECRET}}
