--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [16.x, 18.x]
 
     steps:
     - uses: actions/checkout@v3
@@ -26,7 +26,7 @@ jobs:
       uses: pnpm/action-setup@v2
       id: pnpm-install
       with:
-        version: 7
+        version: 8
 
     - name: Install dependency
       run: pnpm install
